--- a/android/app/src/main/res/drawable/spinner_background.xml
+++ b/android/app/src/main/res/drawable/spinner_background.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <layer-list>
-            <item>
-                <shape android:shape="rectangle">
-                    <solid android:color="#FFFFFF"/>
-                    <corners android:radius="8dp"/>
-                    <stroke android:width="1dp" android:color="#CCCCCC"/>
-                </shape>
-            </item>
-            <item android:gravity="end|center_vertical" android:right="12dp">
-                <bitmap android:src="@drawable/ic_arrow_down"
-                    android:tint="#808080"/>
-            </item>
-        </layer-list>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white"/>
+            <corners android:radius="8dp"/>
+            <stroke android:width="1dp" android:color="#CCCCCC"/>
+        </shape>
     </item>
-</selector>
+
+    <item android:gravity="center_vertical|end">
+        <vector
+            android:width="24dp"
+            android:height="24dp"
+            android:viewportWidth="24.0"
+            android:viewportHeight="24.0">
+            <path
+                android:fillColor="?attr/colorPrimary"
+                android:pathData="M7,10l5,5 5,-5z"/>
+        </vector>
+    </item>
+</layer-list>
